# ml-framework

./: .gitignore  pyproject.toml
conf/: hello.json
scripts/: run.py  sync.sh
src/: dataset.py  main.py  net.py  utili.py
